FIX web: wrong background color beyond screen height in calendar

--- a/addons/web/static/src/less/web_calendar.less
+++ b/addons/web/static/src/less/web_calendar.less
@@ -41,7 +41,6 @@
         min-width: 0;
 
         .o_calendar_widget {
-            height: 100%;
             background-color: @odoo-view-background-color;
             * {
                 z-index: 0; // FIXME
